# edusphereai

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  PRD.md  README.md  app_state.py  pyproject.toml  run.bat  streamlit_app.py  theme.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
docs/: ARCHITECTURE.md
pages/: 1_live_monitor.py  2_zone_editor.py  3_event_log.py  4_analytics.py  5_settings.py
surveillance/: __init__.py  config.py  system.py  types.py  zones.py
surveillance/alerts/: __init__.py  engine.py  notifier.py
surveillance/analytics/: __init__.py  metrics.py
surveillance/detection/: __init__.py  detector.py  tracker.py
surveillance/storage/: __init__.py  db.py
surveillance/utils/: __init__.py  audio.py  drawing.py
surveillance/video/: __init__.py  stream.py
tests/: test_alerts.py  test_config.py  test_db.py  test_detector.py  test_metrics.py  test_system.py  test_tracker.py  test_video_stream.py  test_zones.py
